@@ -67,7 +67,7 @@
   bfc763facc8aac0cce9b9d2d7897da428827a2c5 2011101100 msys-make.xml
   828d0fd932f541f7f5a77e069c645e82c0a3d26e 2011101100 msys-man.xml
   83461b0df222247284893defdeab8179f1f45ab1 2011101100 msys-minires.xml
-  f79d4485d3e51d5cf03964c44da576c483c7770c 2011101100 msys-mintty.xml
+  16e71b1eff20ffe671589e5b4c0fa1aaa10fb98f 2012010200 msys-mintty.xml
   5a59b80c78015799c171f0ecf9f7b558be248775 2011112700 msys-mksh.xml
   d6919edb030a8a129da743f1c05756d99f5b6c81 2011101100 msys-mktemp.xml
   6ffc1c28147bd62d234f71070d53f9cb99a2cfe0 2011101100 msys-openssh.xml
