@@ -26,6 +26,8 @@
 
       <component class="bin">
         <requires eq="msys-core-*-msys-*-bin.tar" />
+        <release tarname="mintty-1.0.3-1-msys-1.0.17-bin.tar.lzma" />
+        <release tarname="mintty-1.0.2-1-msys-1.0.17-bin.tar.lzma" />
         <release tarname="mintty-1.0.1-1-msys-1.0.16-bin.tar.lzma" />
         <release tarname="mintty-0.9.9-1-msys-1.0.16-bin.tar.lzma" />
         <release tarname="mintty-0.9.8-1-msys-1.0.16-bin.tar.lzma" />
@@ -39,6 +41,8 @@
       </component>
 
       <component class="doc">
+        <release tarname="mintty-1.0.3-1-msys-1.0.17-doc.tar.lzma" />
+        <release tarname="mintty-1.0.2-1-msys-1.0.17-doc.tar.lzma" />
         <release tarname="mintty-1.0.1-1-msys-1.0.16-doc.tar.lzma" />
         <release tarname="mintty-0.9.9-1-msys-1.0.16-doc.tar.lzma" />
         <release tarname="mintty-0.9.8-1-msys-1.0.16-doc.tar.lzma" />
@@ -51,18 +55,6 @@
         <release tarname="mintty-0.9.1-1-msys-1.0.16-doc.tar.lzma" />
       </component>
 
-      <component class="lic">
-        <release tarname="mintty-1.0.1-1-msys-1.0.16-lic.tar.lzma" />
-        <release tarname="mintty-0.9.9-1-msys-1.0.16-lic.tar.lzma" />
-        <release tarname="mintty-0.9.8-1-msys-1.0.16-lic.tar.lzma" />
-        <release tarname="mintty-0.9.7-1-msys-1.0.16-lic.tar.lzma" />
-        <release tarname="mintty-0.9.6-1-msys-1.0.16-lic.tar.lzma" />
-        <release tarname="mintty-0.9.5-1-msys-1.0.16-lic.tar.lzma" />
-        <release tarname="mintty-0.9.4-1-msys-1.0.16-lic.tar.lzma" />
-        <release tarname="mintty-0.9.3-1-msys-1.0.16-lic.tar.lzma" />
-        <release tarname="mintty-0.9.2-1-msys-1.0.16-lic.tar.lzma" />
-        <release tarname="mintty-0.9.1-1-msys-1.0.16-lic.tar.lzma" />
-      </component>
     </package>
 
   </package-collection>
